--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="row mb-5 text-center">
           <div class="col-12 text-container">
             <h1 class="display-2 text-white mt-3">
-              Explore Our Training and Seminar Videos
+              Hello world!
             </h1>
             <p class="lead text-white w-75 m-auto mb-4">
               Whether you're a beginner or an experienced professional, our
